-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0 RC, 6.7.0, 6.7
-
None
-
-
7e5a0b54f (dev), 477a7c6aa (6.7)
QODBCDriver::record fails with "Unable to allocate handle"
This is the result of an error in Change-Id: I7aba4472be1e2991f395eeb7e43f8dd272336694.
Fix proposed in Change-Id: Ic028c3786203cbc1c3d7316c1ae22c12a928b170.
- is duplicated by
-
QTBUG-124616 QSqlDatabase.open() error
-
- Closed
-
-
QTBUG-124781 The SQL QODBC driver is unable to connect to the SQL Server database.
-
- Closed
-