SQL/ODBC: QODBCDriver::record Unable to allocate handle

Seems to have been left out by 874f5c1f463cad61f49e0ff7007852a73fd93e7c

Pick-to: 6.7
Fixes: QTBUG-123478
Change-Id: Ic028c3786203cbc1c3d7316c1ae22c12a928b170
Reviewed-by: Christian Ehrlicher <ch.ehrlicher@gmx.de>